<resources>

    <string name="app_name">3D Find It</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_app">3D Find It</string>
    <string name="home">This is Home Activity</string>
    <string name="button2">Next Activity</string>
    <string name="industry_home">Industry</string>
    <string name="threedps">Manufacturing</string>
    <string name="archisource">Architecture</string>
    <string name="printsource">3D Printing</string>
    <string name="scisource">Science</string>
    <string name="gamesource">Gaming</string>
    <string name="robosource">Robotics</string>
    <string name="textsearch">Your Text Search</string>
    <string name="app_search">3D Search</string>
    <string name="upload">Upload a model</string>
    <string name="trysearch">Try it!</string>
    <string name="upload_search">UPLOAD &amp; SEARCH</string>
    <string name="search_hint">Find it!</string>
    <string name="part_found">PART FOUND</string>
    <string name="part_title">Part Title</string>
    <string name="prod_descript">PRODUCT DESCRIPTION</string>

    <!-- Colors -->
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="grey_background">#4d4c4e</color>
    <color name="blue">#00adee</color>
    <string name="title_facts">Interesting Facts</string>
    <string name="facts_text">3D Printing is a revolutionary method of creating 3D models that accelerates the design and prototyping process.</string>
    
</resources>