<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:overScrollMode="always" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:fadingEdgeLength="20dp"
        android:overScrollMode="always" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue"
                android:onClick="n3dps"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ImageView03"
                    android:layout_width="141dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/threedps_image" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:importantForAccessibility="auto"
                    android:text="@string/threedps"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:onClick="mechasource"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="141dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/threed_printing" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:importantForAccessibility="auto"
                    android:text="@string/printsource"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ind3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:onClick="archisource"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="141dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/archisource" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:importantForAccessibility="auto"
                    android:text="@string/archisource"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/threedarchisource"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:onClick="scisource"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="141dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/industry_four" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:importantForAccessibility="auto"
                    android:text="@string/scisource"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:onClick="robosource"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ImageView05"
                    android:layout_width="141dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/robosource" />

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:importantForAccessibility="auto"
                    android:text="@string/robosource"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:onClick="Gamesource"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ImageView04"
                    android:layout_width="141dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/industry_six" />

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:importantForAccessibility="auto"
                    android:text="@string/gamesource"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</ScrollView>